--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "npm run services:up && npm run wait-for-postgres && nest start",
-    "dev:chain": "npm run services:up && npm run wait-for-postgres && npm run migrate:up && nest start --watch",
+    "dev:chain": "npm run services:up && npm run wait-for-postgres && npm run prisma:migrate:up && nest start --watch",
     "start:dev": "dotenv -e .env.development -- npm run dev:chain",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "services:up": "docker compose -f infra/compose.yaml up -d",
     "services:down": "docker compose -f infra/compose.yaml down",
     "wait-for-postgres": "npx ts-node infra/scripts/wait-for-postgres.ts",
-    "migrate:up": "npx prisma migrate dev",
-    "migrate:down": "npx prisma migrate reset",
-    "generate": "npx prisma generate",
+    "prisma:migrate:up": "npx prisma migrate dev",
+    "prisma:migrate:down": "npx prisma migrate reset",
+    "prisma:generate": "npx prisma generate",
+    "prisma:studio": "dotenv -e .env.development -- npx prisma studio ",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -27,12 +28,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/class-validator": "^0.13.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.5.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "dotenv-cli": "^8.0.0",
     "reflect-metadata": "^0.2.2",
