--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,8 @@
-DATABASE_URL=postgresql://local_user:local_password@localhost:4000/investmentdb
+POSTGRES_HOST=localhost
+POSTGRES_PORT=4000
+POSTGRES_USER=local_user
+POSTGRES_DB=investmentdb
+POSTGRES_PASSWORD=local_password
+DATABASE_URL=postgresql://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DBPOSTGRES_HOST=localhost
+
+
